# local-dev-insights

./: .gitignore  Cargo.toml  README.md
.antigravity/: SKILL.md
.devcontainer/: devcontainer.json
docs/: system_spec.md
src/: db.rs  main.rs  mcp.rs  prompts.rs  resources.rs  server.rs  tools.rs
